fixed bug image cutoff theme section

--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,6 @@ ul.dropdown-list{
   background-image: url('../main-background.png');
   background-size: cover;
   background-position: center;
-  background-position-y: -150px;
 }
 
 .theme-logo{
